--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="SBP-BRiMS Conference"/>
     <meta name="keywords" content="Social Computing, Behavioral-Cultural Modeling, Research, Social Network Analysis, Networks, Social Behavior, NIH, SBP, BRiMS" />
-    <link rel="shortcut icon" href="assets/img/favicon.gif">
+    <link rel="shortcut icon" href="../assets/img/favicon.gif">
 
     <title>SBP-BRiMS 2016</title>
 
