--- a/index.html
+++ b/index.html
@@ -64,17 +64,20 @@
 		</div>
 	</section>
 
-	<div id="landingheader">
-		<div class="container">
-			<div class="row">
+  <div id="portfoliowrap">
+        <div class="container">
+            <div class="row mt">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h3>
+                    2016 International Conference on Social Computing, Behavioral-Cultural Modeling, & Prediction and Behavior Representation in Modeling and Simulation <br />
+                    June 28 – July 1, 2016, UCDC Center,  Washington DC, USA <br /> <br />
+                    SBP-BRIMS 2016 has moved to a new site!  Click <a href="http://sbp-brims.org/">http://sbp-brims.org/</a> to go to the current location.
 				
-				<p>
-				SBP-BRIMS 2016 has moved to a new site!  Click <a href="http://sbp-brims.org/">http://sbp-brims.org/</a> to go to the current location.
-				</p>
-				
-			</div><! --/row -->
-		</div><! --/container -->
-	</div><! --/headerwrap -->
+                </h3>
+                </div>
+            </div><!-- /row -->
+        </div><!-- /container -->
+    </div><!-- /aboutwrap -->
 
 
 <!-- start: Footer -->
